# go_cart

./: .gitignore  LICENSE  Makefile.am  Makefile.in  README.md  autobuild.sh  autogen.sh  china_withSARandTWN_conic.gen  configure  configure.ac  india_noLD_conic.gen  process_map_file.md  usa_low48splitME_conic.gen
cartogram_generator/: Makefile  Makefile.am  Makefile.in  cartogram.c  cartogram.h  diff_integrate.c  ffb_integrate.c  fill_with_density.c  integrate.c  main.c  process_json.c  ps_figure.c  read_gen.c  read_map.c
cartogram_generator/.deps/: cartogram-cartogram.Po  cartogram-diff_integrate.Po  cartogram-ffb_integrate.Po  cartogram-fill_with_density.Po  cartogram-main.Po  cartogram-process_json.Po  cartogram-ps_figure.Po  cartogram-read_gen.Po  cartogram-read_map.Po
sample_data/: eurostat_equal_area.geojson  eurostat_population_2023.csv  germany_equal_area.geojson  germany_population_2011.csv  netherlands_equal_area.geojson  netherlands_population_2023.csv  usa_contiguous_arcgis.json  usa_contiguous_electors.csv
scripts/: build_cjson.sh  build_linux.sh  build_mac.sh  prepare_env_linux.sh  prepare_env_mac.sh  semi_autobuild.sh
